Wed Oct 17 16:23:17 2012  Koichi Sasada  <ko1@atdot.net>

	* vm_insnhelper.c (vm_getivar): fix to use `aux.index' instead of
	  `aux.opt_pc'.

Wed Oct 17 16:03:54 2012  Koichi Sasada  <ko1@atdot.net>

	* vm_insnhelper.c (vm_call_method_missing): make a refactoring
	  about method_missing process. Use `vm_call_method()' to invoke
	  `method_missing' method instead of `rb_funcall2()'.
	  In `vm_call_method()', set fastpath to `vm_call_method_missing()'
	  if it can be cached.

	* vm_core.h (rb_call_info_t): add new field
	  `rb_call_info_t::aux::missing_reasion' to pass the reason to
	  `vm_call_method_missing()'.

Wed Oct 17 15:33:12 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (opt-dir): allow multiple directories separated by
	  $PATH_SEPARATOR as well as dir_config in mkmf.rb. [ruby-core:47868]
	  [Bug #7120]

Wed Oct 17 15:08:13 2012  Shugo Maeda  <shugo@ruby-lang.org>

	* lib/net/imap.rb: fix Net::IMAP::ResponseParser to accept
	  message/delivery-status ([ruby-core:47920] [Bug #7146]),
	  message/rfc822 attachments ([ruby-core:47921] [Bug #7147]), and
	  (BODY ("MIXED")) ([ruby-core:47951] [Bug #7153]).
	  patched by Tony Arkles.

	* test/net/imap/test_imap_response_parser.rb: related test.

Wed Oct 17 11:04:48 2012  NAKAMURA Usaku  <usa@ruby-lang.org>

	* test/ruby/test_hash.rb (TestHash#test_dup_equality): added a new test
	  to show the problem of r37232.

Wed Oct 17 10:48:40 2012  Shugo Maeda  <shugo@ruby-lang.org>

	* vm_insnhelper.c (vm_search_method): fix a build error that occurs 
	  when OPT_INLINE_METHOD_CACHE is 0.

Wed Oct 17 08:46:47 2012  Koichi Sasada  <ko1@atdot.net>

	* benchmark/bm_vm2_dstr.rb: add a benchmark to measure
	  performance of dynamic generated string ("foo#{bar}baz").

Wed Oct 17 08:32:46 2012  Koichi Sasada  <ko1@atdot.net>

	* compile.c (compile_dstr_fragments): use `putobject' instead of
	  `putstring' for all of strings used by NODE_DSTR because
	  ruby users can not grab this string.